# ray_tracer

./: CMakeLists.txt  README.md  main.cpp
include/color/: color.hpp  material.hpp
include/components/geometry/: geometry_shape.hpp  sphere.hpp  triangle.hpp
include/components/math/: intersection.hpp  random.hpp  ray.hpp  vector3.hpp
include/components/rendering/: camera.hpp  color.hpp  material.hpp  render_settings.hpp  texture.hpp
include/components/scene/: object.hpp  scene.hpp
include/geometry/: triangle.hpp
include/math/: vector3.hpp
include/rendering/: color.hpp  texture.hpp
include/systems/image/: bmp.hpp
include/systems/math/: intersection.hpp  random.hpp
include/systems/rendering/: main_renderer.hpp
